Fixed BundleDTO list being immutable